--- a/source/style/blocks/_footer.scss
+++ b/source/style/blocks/_footer.scss
@@ -1,8 +1,8 @@
 .footer{
-	background-color: $deepBlue;
+	background-color: #000000;
 	padding: 60px 0 49px;
 	.section__header{
-		color: $white;
+		color: #fff;
 		font-size: 30px;
 		font-weight: $medium;
 	}
