--- a/source/style/common/sprite-img.scss
+++ b/source/style/common/sprite-img.scss
@@ -10,191 +10,235 @@
 // At the bottom of this section, we provide information about the spritesheet itself
 // $spritesheet: width height image $spritesheet-sprites;
 $adult-websites-name: 'adult-websites';
-$adult-websites-x: 352px;
-$adult-websites-y: 67px;
-$adult-websites-offset-x: -352px;
-$adult-websites-offset-y: -67px;
+$adult-websites-x: 60px;
+$adult-websites-y: 223px;
+$adult-websites-offset-x: -60px;
+$adult-websites-offset-y: -223px;
 $adult-websites-width: 62px;
 $adult-websites-height: 62px;
-$adult-websites-total-width: 454px;
-$adult-websites-total-height: 242px;
+$adult-websites-total-width: 477px;
+$adult-websites-total-height: 305px;
 $adult-websites-image: '../images/sprite-img.png';
-$adult-websites: (352px, 67px, -352px, -67px, 62px, 62px, 454px, 242px, '../images/sprite-img.png', 'adult-websites', );
+$adult-websites: (60px, 223px, -60px, -223px, 62px, 62px, 477px, 305px, '../images/sprite-img.png', 'adult-websites', );
 $android-name: 'android';
-$android-x: 0px;
-$android-y: 180px;
-$android-offset-x: 0px;
-$android-offset-y: -180px;
+$android-x: 270px;
+$android-y: 67px;
+$android-offset-x: -270px;
+$android-offset-y: -67px;
 $android-width: 162px;
 $android-height: 62px;
-$android-total-width: 454px;
-$android-total-height: 242px;
+$android-total-width: 477px;
+$android-total-height: 305px;
 $android-image: '../images/sprite-img.png';
-$android: (0px, 180px, 0px, -180px, 162px, 62px, 454px, 242px, '../images/sprite-img.png', 'android', );
+$android: (270px, 67px, -270px, -67px, 162px, 62px, 477px, 305px, '../images/sprite-img.png', 'android', );
+$appstore-button-name: 'appstore-button';
+$appstore-button-x: 0px;
+$appstore-button-y: 156px;
+$appstore-button-offset-x: 0px;
+$appstore-button-offset-y: -156px;
+$appstore-button-width: 207px;
+$appstore-button-height: 62px;
+$appstore-button-total-width: 477px;
+$appstore-button-total-height: 305px;
+$appstore-button-image: '../images/sprite-img.png';
+$appstore-button: (0px, 156px, 0px, -156px, 207px, 62px, 477px, 305px, '../images/sprite-img.png', 'appstore-button', );
 $appstore-name: 'appstore';
 $appstore-x: 0px;
 $appstore-y: 0px;
 $appstore-offset-x: 0px;
 $appstore-offset-y: 0px;
-$appstore-width: 287px;
-$appstore-height: 85px;
-$appstore-total-width: 454px;
-$appstore-total-height: 242px;
+$appstore-width: 265px;
+$appstore-height: 73px;
+$appstore-total-width: 477px;
+$appstore-total-height: 305px;
 $appstore-image: '../images/sprite-img.png';
-$appstore: (0px, 0px, 0px, 0px, 287px, 85px, 454px, 242px, '../images/sprite-img.png', 'appstore', );
+$appstore: (0px, 0px, 0px, 0px, 265px, 73px, 477px, 305px, '../images/sprite-img.png', 'appstore', );
 $casino-name: 'casino';
-$casino-x: 292px;
-$casino-y: 154px;
-$casino-offset-x: -292px;
-$casino-offset-y: -154px;
+$casino-x: 127px;
+$casino-y: 223px;
+$casino-offset-x: -127px;
+$casino-offset-y: -223px;
 $casino-width: 62px;
 $casino-height: 62px;
-$casino-total-width: 454px;
-$casino-total-height: 242px;
+$casino-total-width: 477px;
+$casino-total-height: 305px;
 $casino-image: '../images/sprite-img.png';
-$casino: (292px, 154px, -292px, -154px, 62px, 62px, 454px, 242px, '../images/sprite-img.png', 'casino', );
+$casino: (127px, 223px, -127px, -223px, 62px, 62px, 477px, 305px, '../images/sprite-img.png', 'casino', );
 $ios-name: 'ios';
-$ios-x: 292px;
-$ios-y: 0px;
-$ios-offset-x: -292px;
-$ios-offset-y: 0px;
+$ios-x: 270px;
+$ios-y: 134px;
+$ios-offset-x: -270px;
+$ios-offset-y: -134px;
 $ios-width: 162px;
 $ios-height: 62px;
-$ios-total-width: 454px;
-$ios-total-height: 242px;
+$ios-total-width: 477px;
+$ios-total-height: 305px;
 $ios-image: '../images/sprite-img.png';
-$ios: (292px, 0px, -292px, 0px, 162px, 62px, 454px, 242px, '../images/sprite-img.png', 'ios', );
+$ios: (270px, 134px, -270px, -134px, 162px, 62px, 477px, 305px, '../images/sprite-img.png', 'ios', );
+$playstore-button-name: 'playstore-button';
+$playstore-button-x: 270px;
+$playstore-button-y: 0px;
+$playstore-button-offset-x: -270px;
+$playstore-button-offset-y: 0px;
+$playstore-button-width: 207px;
+$playstore-button-height: 62px;
+$playstore-button-total-width: 477px;
+$playstore-button-total-height: 305px;
+$playstore-button-image: '../images/sprite-img.png';
+$playstore-button: (270px, 0px, -270px, 0px, 207px, 62px, 477px, 305px, '../images/sprite-img.png', 'playstore-button', );
 $playstore-name: 'playstore';
 $playstore-x: 0px;
-$playstore-y: 90px;
+$playstore-y: 78px;
 $playstore-offset-x: 0px;
-$playstore-offset-y: -90px;
-$playstore-width: 285px;
-$playstore-height: 85px;
-$playstore-total-width: 454px;
-$playstore-total-height: 242px;
+$playstore-offset-y: -78px;
+$playstore-width: 265px;
+$playstore-height: 73px;
+$playstore-total-width: 477px;
+$playstore-total-height: 305px;
 $playstore-image: '../images/sprite-img.png';
-$playstore: (0px, 90px, 0px, -90px, 285px, 85px, 454px, 242px, '../images/sprite-img.png', 'playstore', );
+$playstore: (0px, 78px, 0px, -78px, 265px, 73px, 477px, 305px, '../images/sprite-img.png', 'playstore', );
 $red-arrow-name: 'red-arrow';
-$red-arrow-x: 292px;
-$red-arrow-y: 67px;
-$red-arrow-offset-x: -292px;
-$red-arrow-offset-y: -67px;
+$red-arrow-x: 0px;
+$red-arrow-y: 223px;
+$red-arrow-offset-x: 0px;
+$red-arrow-offset-y: -223px;
 $red-arrow-width: 55px;
 $red-arrow-height: 82px;
-$red-arrow-total-width: 454px;
-$red-arrow-total-height: 242px;
+$red-arrow-total-width: 477px;
+$red-arrow-total-height: 305px;
 $red-arrow-image: '../images/sprite-img.png';
-$red-arrow: (292px, 67px, -292px, -67px, 55px, 82px, 454px, 242px, '../images/sprite-img.png', 'red-arrow', );
+$red-arrow: (0px, 223px, 0px, -223px, 55px, 82px, 477px, 305px, '../images/sprite-img.png', 'red-arrow', );
 $youtube-name: 'youtube';
-$youtube-x: 359px;
-$youtube-y: 154px;
-$youtube-offset-x: -359px;
-$youtube-offset-y: -154px;
+$youtube-x: 194px;
+$youtube-y: 223px;
+$youtube-offset-x: -194px;
+$youtube-offset-y: -223px;
 $youtube-width: 62px;
 $youtube-height: 62px;
-$youtube-total-width: 454px;
-$youtube-total-height: 242px;
+$youtube-total-width: 477px;
+$youtube-total-height: 305px;
 $youtube-image: '../images/sprite-img.png';
-$youtube: (359px, 154px, -359px, -154px, 62px, 62px, 454px, 242px, '../images/sprite-img.png', 'youtube', );
+$youtube: (194px, 223px, -194px, -223px, 62px, 62px, 477px, 305px, '../images/sprite-img.png', 'youtube', );
 $adult-websites-2x-name: 'adult-websites@2x';
-$adult-websites-2x-x: 704px;
-$adult-websites-2x-y: 134px;
-$adult-websites-2x-offset-x: -704px;
-$adult-websites-2x-offset-y: -134px;
+$adult-websites-2x-x: 120px;
+$adult-websites-2x-y: 446px;
+$adult-websites-2x-offset-x: -120px;
+$adult-websites-2x-offset-y: -446px;
 $adult-websites-2x-width: 124px;
 $adult-websites-2x-height: 124px;
-$adult-websites-2x-total-width: 908px;
-$adult-websites-2x-total-height: 484px;
+$adult-websites-2x-total-width: 954px;
+$adult-websites-2x-total-height: 610px;
 $adult-websites-2x-image: '../images/sprite-img@2x.png';
-$adult-websites-2x: (704px, 134px, -704px, -134px, 124px, 124px, 908px, 484px, '../images/sprite-img@2x.png', 'adult-websites@2x', );
+$adult-websites-2x: (120px, 446px, -120px, -446px, 124px, 124px, 954px, 610px, '../images/sprite-img@2x.png', 'adult-websites@2x', );
 $android-2x-name: 'android@2x';
-$android-2x-x: 0px;
-$android-2x-y: 360px;
-$android-2x-offset-x: 0px;
-$android-2x-offset-y: -360px;
+$android-2x-x: 540px;
+$android-2x-y: 134px;
+$android-2x-offset-x: -540px;
+$android-2x-offset-y: -134px;
 $android-2x-width: 324px;
 $android-2x-height: 124px;
-$android-2x-total-width: 908px;
-$android-2x-total-height: 484px;
+$android-2x-total-width: 954px;
+$android-2x-total-height: 610px;
 $android-2x-image: '../images/sprite-img@2x.png';
-$android-2x: (0px, 360px, 0px, -360px, 324px, 124px, 908px, 484px, '../images/sprite-img@2x.png', 'android@2x', );
+$android-2x: (540px, 134px, -540px, -134px, 324px, 124px, 954px, 610px, '../images/sprite-img@2x.png', 'android@2x', );
+$appstore-button-2x-name: 'appstore-button@2x';
+$appstore-button-2x-x: 0px;
+$appstore-button-2x-y: 312px;
+$appstore-button-2x-offset-x: 0px;
+$appstore-button-2x-offset-y: -312px;
+$appstore-button-2x-width: 414px;
+$appstore-button-2x-height: 124px;
+$appstore-button-2x-total-width: 954px;
+$appstore-button-2x-total-height: 610px;
+$appstore-button-2x-image: '../images/sprite-img@2x.png';
+$appstore-button-2x: (0px, 312px, 0px, -312px, 414px, 124px, 954px, 610px, '../images/sprite-img@2x.png', 'appstore-button@2x', );
 $appstore-2x-name: 'appstore@2x';
 $appstore-2x-x: 0px;
 $appstore-2x-y: 0px;
 $appstore-2x-offset-x: 0px;
 $appstore-2x-offset-y: 0px;
-$appstore-2x-width: 574px;
-$appstore-2x-height: 170px;
-$appstore-2x-total-width: 908px;
-$appstore-2x-total-height: 484px;
+$appstore-2x-width: 530px;
+$appstore-2x-height: 146px;
+$appstore-2x-total-width: 954px;
+$appstore-2x-total-height: 610px;
 $appstore-2x-image: '../images/sprite-img@2x.png';
-$appstore-2x: (0px, 0px, 0px, 0px, 574px, 170px, 908px, 484px, '../images/sprite-img@2x.png', 'appstore@2x', );
+$appstore-2x: (0px, 0px, 0px, 0px, 530px, 146px, 954px, 610px, '../images/sprite-img@2x.png', 'appstore@2x', );
 $casino-2x-name: 'casino@2x';
-$casino-2x-x: 584px;
-$casino-2x-y: 308px;
-$casino-2x-offset-x: -584px;
-$casino-2x-offset-y: -308px;
+$casino-2x-x: 254px;
+$casino-2x-y: 446px;
+$casino-2x-offset-x: -254px;
+$casino-2x-offset-y: -446px;
 $casino-2x-width: 124px;
 $casino-2x-height: 124px;
-$casino-2x-total-width: 908px;
-$casino-2x-total-height: 484px;
+$casino-2x-total-width: 954px;
+$casino-2x-total-height: 610px;
 $casino-2x-image: '../images/sprite-img@2x.png';
-$casino-2x: (584px, 308px, -584px, -308px, 124px, 124px, 908px, 484px, '../images/sprite-img@2x.png', 'casino@2x', );
+$casino-2x: (254px, 446px, -254px, -446px, 124px, 124px, 954px, 610px, '../images/sprite-img@2x.png', 'casino@2x', );
 $ios-2x-name: 'ios@2x';
-$ios-2x-x: 584px;
-$ios-2x-y: 0px;
-$ios-2x-offset-x: -584px;
-$ios-2x-offset-y: 0px;
+$ios-2x-x: 540px;
+$ios-2x-y: 268px;
+$ios-2x-offset-x: -540px;
+$ios-2x-offset-y: -268px;
 $ios-2x-width: 324px;
 $ios-2x-height: 124px;
-$ios-2x-total-width: 908px;
-$ios-2x-total-height: 484px;
+$ios-2x-total-width: 954px;
+$ios-2x-total-height: 610px;
 $ios-2x-image: '../images/sprite-img@2x.png';
-$ios-2x: (584px, 0px, -584px, 0px, 324px, 124px, 908px, 484px, '../images/sprite-img@2x.png', 'ios@2x', );
+$ios-2x: (540px, 268px, -540px, -268px, 324px, 124px, 954px, 610px, '../images/sprite-img@2x.png', 'ios@2x', );
+$playstore-button-2x-name: 'playstore-button@2x';
+$playstore-button-2x-x: 540px;
+$playstore-button-2x-y: 0px;
+$playstore-button-2x-offset-x: -540px;
+$playstore-button-2x-offset-y: 0px;
+$playstore-button-2x-width: 414px;
+$playstore-button-2x-height: 124px;
+$playstore-button-2x-total-width: 954px;
+$playstore-button-2x-total-height: 610px;
+$playstore-button-2x-image: '../images/sprite-img@2x.png';
+$playstore-button-2x: (540px, 0px, -540px, 0px, 414px, 124px, 954px, 610px, '../images/sprite-img@2x.png', 'playstore-button@2x', );
 $playstore-2x-name: 'playstore@2x';
 $playstore-2x-x: 0px;
-$playstore-2x-y: 180px;
+$playstore-2x-y: 156px;
 $playstore-2x-offset-x: 0px;
-$playstore-2x-offset-y: -180px;
-$playstore-2x-width: 570px;
-$playstore-2x-height: 170px;
-$playstore-2x-total-width: 908px;
-$playstore-2x-total-height: 484px;
+$playstore-2x-offset-y: -156px;
+$playstore-2x-width: 530px;
+$playstore-2x-height: 146px;
+$playstore-2x-total-width: 954px;
+$playstore-2x-total-height: 610px;
 $playstore-2x-image: '../images/sprite-img@2x.png';
-$playstore-2x: (0px, 180px, 0px, -180px, 570px, 170px, 908px, 484px, '../images/sprite-img@2x.png', 'playstore@2x', );
+$playstore-2x: (0px, 156px, 0px, -156px, 530px, 146px, 954px, 610px, '../images/sprite-img@2x.png', 'playstore@2x', );
 $red-arrow-2x-name: 'red-arrow@2x';
-$red-arrow-2x-x: 584px;
-$red-arrow-2x-y: 134px;
-$red-arrow-2x-offset-x: -584px;
-$red-arrow-2x-offset-y: -134px;
+$red-arrow-2x-x: 0px;
+$red-arrow-2x-y: 446px;
+$red-arrow-2x-offset-x: 0px;
+$red-arrow-2x-offset-y: -446px;
 $red-arrow-2x-width: 110px;
 $red-arrow-2x-height: 164px;
-$red-arrow-2x-total-width: 908px;
-$red-arrow-2x-total-height: 484px;
+$red-arrow-2x-total-width: 954px;
+$red-arrow-2x-total-height: 610px;
 $red-arrow-2x-image: '../images/sprite-img@2x.png';
-$red-arrow-2x: (584px, 134px, -584px, -134px, 110px, 164px, 908px, 484px, '../images/sprite-img@2x.png', 'red-arrow@2x', );
+$red-arrow-2x: (0px, 446px, 0px, -446px, 110px, 164px, 954px, 610px, '../images/sprite-img@2x.png', 'red-arrow@2x', );
 $youtube-2x-name: 'youtube@2x';
-$youtube-2x-x: 718px;
-$youtube-2x-y: 308px;
-$youtube-2x-offset-x: -718px;
-$youtube-2x-offset-y: -308px;
+$youtube-2x-x: 388px;
+$youtube-2x-y: 446px;
+$youtube-2x-offset-x: -388px;
+$youtube-2x-offset-y: -446px;
 $youtube-2x-width: 124px;
 $youtube-2x-height: 124px;
-$youtube-2x-total-width: 908px;
-$youtube-2x-total-height: 484px;
+$youtube-2x-total-width: 954px;
+$youtube-2x-total-height: 610px;
 $youtube-2x-image: '../images/sprite-img@2x.png';
-$youtube-2x: (718px, 308px, -718px, -308px, 124px, 124px, 908px, 484px, '../images/sprite-img@2x.png', 'youtube@2x', );
-$spritesheet-width: 454px;
-$spritesheet-height: 242px;
+$youtube-2x: (388px, 446px, -388px, -446px, 124px, 124px, 954px, 610px, '../images/sprite-img@2x.png', 'youtube@2x', );
+$spritesheet-width: 477px;
+$spritesheet-height: 305px;
 $spritesheet-image: '../images/sprite-img.png';
-$spritesheet-sprites: ($adult-websites, $android, $appstore, $casino, $ios, $playstore, $red-arrow, $youtube, );
-$spritesheet: (454px, 242px, '../images/sprite-img.png', $spritesheet-sprites, );
-$retina-spritesheet-width: 908px;
-$retina-spritesheet-height: 484px;
+$spritesheet-sprites: ($adult-websites, $android, $appstore-button, $appstore, $casino, $ios, $playstore-button, $playstore, $red-arrow, $youtube, );
+$spritesheet: (477px, 305px, '../images/sprite-img.png', $spritesheet-sprites, );
+$retina-spritesheet-width: 954px;
+$retina-spritesheet-height: 610px;
 $retina-spritesheet-image: '../images/sprite-img@2x.png';
-$retina-spritesheet-sprites: ($adult-websites-2x, $android-2x, $appstore-2x, $casino-2x, $ios-2x, $playstore-2x, $red-arrow-2x, $youtube-2x, );
-$retina-spritesheet: (908px, 484px, '../images/sprite-img@2x.png', $retina-spritesheet-sprites, );
+$retina-spritesheet-sprites: ($adult-websites-2x, $android-2x, $appstore-button-2x, $appstore-2x, $casino-2x, $ios-2x, $playstore-button-2x, $playstore-2x, $red-arrow-2x, $youtube-2x, );
+$retina-spritesheet: (954px, 610px, '../images/sprite-img@2x.png', $retina-spritesheet-sprites, );
 
 // These "retina group" variables are mappings for the naming and pairing of normal and retina sprites.
 //
@@ -203,19 +247,23 @@ $adult-websites-group-name: 'adult-websites';
 $adult-websites-group: ('adult-websites', $adult-websites, $adult-websites-2x, );
 $android-group-name: 'android';
 $android-group: ('android', $android, $android-2x, );
+$appstore-button-group-name: 'appstore-button';
+$appstore-button-group: ('appstore-button', $appstore-button, $appstore-button-2x, );
 $appstore-group-name: 'appstore';
 $appstore-group: ('appstore', $appstore, $appstore-2x, );
 $casino-group-name: 'casino';
 $casino-group: ('casino', $casino, $casino-2x, );
 $ios-group-name: 'ios';
 $ios-group: ('ios', $ios, $ios-2x, );
+$playstore-button-group-name: 'playstore-button';
+$playstore-button-group: ('playstore-button', $playstore-button, $playstore-button-2x, );
 $playstore-group-name: 'playstore';
 $playstore-group: ('playstore', $playstore, $playstore-2x, );
 $red-arrow-group-name: 'red-arrow';
 $red-arrow-group: ('red-arrow', $red-arrow, $red-arrow-2x, );
 $youtube-group-name: 'youtube';
 $youtube-group: ('youtube', $youtube, $youtube-2x, );
-$retina-groups: ($adult-websites-group, $android-group, $appstore-group, $casino-group, $ios-group, $playstore-group, $red-arrow-group, $youtube-group, );
+$retina-groups: ($adult-websites-group, $android-group, $appstore-button-group, $appstore-group, $casino-group, $ios-group, $playstore-button-group, $playstore-group, $red-arrow-group, $youtube-group, );
 
 // The provided mixins are intended to be used with the array-like variables
 //
