--- a/source/style/common/variables.scss
+++ b/source/style/common/variables.scss
@@ -11,6 +11,9 @@ $darkRed: #FA6541;
 $headerColor: #24252A;
 $textColor: #5B606B;
 $white: #fff;
+$textBlue: #375D96;
+$textGrey: #8c8e90;
+$textLightGrey: #a0a6ad;
 
 //Background colors
 $lightBlue: #F4F6FB;
