--- a/source/template/block/_thank-you-message.pug
+++ b/source/template/block/_thank-you-message.pug
@@ -18,9 +18,12 @@ section.thank.mt-5
 									p.thank__question.mb-0 While you’re here…
 								p.thank__download.text-center.mx-auto Download and install VPNinvisible application  if haven’t done it yet.
 						.row
-							.col-12.col-lg-6.mb-3.mb-lg-0
+							.col-12.col-sm-6.mb-3.mb-sm-0
 								a(href='#')
-									.app-store-icon.mx-auto
-							.col-12.col-lg-6
+									.app-store-icon
+							.col-12.col-sm-6
 								a(href='#')
-									.google-store-icon.mx-auto
+									.google-store-icon
+		.row.mt-3
+			.col-12.text-center.copyright
+				p.copyright © 2012-2018 VPN. All rights reserved.
