--- a/source/style/blocks/_sign-up.scss
+++ b/source/style/blocks/_sign-up.scss
@@ -7,8 +7,8 @@
 	}
 	.reason__item{
 		color: $textColor;
-		font-size: 15px;
-		font-weight: $medium;
+		font-size: 18px;
+		font-weight: $regular;
 		display: flex;
 		align-items: center;
 		&:before{
@@ -37,6 +37,10 @@
 		cursor: pointer;
 	}
 	&__terms{
+		.invalid-feedback{
+			position: absolute;
+			left: 0;
+		}
 		.label__link{
 			transition: all .3s;
 			&:hover{
@@ -47,6 +51,7 @@
 		text-align: center;
 		.custom-checkbox{
 			display: inline-block;
+			position: relative;
 		}
 		.custom-control-label{
 			color: $headerColor;
@@ -99,8 +104,8 @@
 		max-width: 63px;
 	}
 	&__text{
-		font-size: 12px;
-		color: $textColor;
+		font-size: 13px;
+		color: $headerColor;
 		font-weight: $medium;
 	}
 	&__header{
@@ -116,7 +121,7 @@
 .promo__button{
 	position: absolute;
 	right: 0;
-	top: 27px;
+	top: 29px;
 	font-size: 15px;
 	font-weight: 500!important;
 	background-color: $deepBlue!important;
@@ -127,7 +132,7 @@
 	}
 }
 .required__label{
-	font-size: 15px;
+	font-size: 17px;
 	font-weight: $medium;
 	position: relative;
 	color: $headerColor;
@@ -140,13 +145,13 @@
 	}
 }
 .signup__label{
-	font-size: 15px;
+	font-size: 17px;
 	font-weight: $medium;
 	color: $headerColor;
 }
 @media (max-width: 991px){
 	.promo__button{
-		top: 26px;
+		top: 29px;
 	}
 }
 @media (max-width: 480px){
