--- a/source/style/blocks/_why.scss
+++ b/source/style/blocks/_why.scss
@@ -1,5 +1,5 @@
 .why{
-	padding: 4.5rem 0 4.3rem;
+	padding: 7rem 0;
 	&__header{
 		color: $headerColor;
 		font-size: 29px;
@@ -7,8 +7,9 @@
 	}
 	&__text{
 		font-size: 16px;
+		line-height: 24px;
+		font-weight: $regular;
 		color: $textColor;
-		font-weight: $medium;
 	}
 }
 @media (max-width: 480px){
