--- a/source/template/block/_forgot-password.pug
+++ b/source/template/block/_forgot-password.pug
@@ -5,15 +5,15 @@ section.forgot.mt-5
 				.forgot__wrapper.p-3.p-md-5
 					.conatiner
 						.row
-							.col-12.text-center
+							.offset-sm-1.col-sm-10.col-12.text-center
 								img.thank__icon.mb-3(src='templates/images/icon-forgot-password.svg')
 						.row
-							.col-12.text-center
+							.offset-sm-1.col-sm-10.col-12.text-center
 								h1.thank__header Forgot password?
 								p.send-to.text-center Enter your email address and we’ll send you a new password.
 						.row
-							.col-12
-								form.forgot__form.needs-validation.px-5.d-flex.flex-wrap.flex-md-nowrap(novalidate)
+							.col-12.col-sm-10.offset-sm-1
+								form.forgot__form.needs-validation.d-flex.flex-wrap.flex-md-nowrap(novalidate)
 									.for-row.w-100
 										.col-12.pr-md-0.mb-3.mb-md-0.px-0.message-to-top
 											input.form-control.forgot-input(type='text' id='validationMail' required)
