--- a/source/template/block/_reason.pug
+++ b/source/template/block/_reason.pug
@@ -5,19 +5,19 @@ section.reasons#link1
 				h2.section__header-red.mb-3 5 Reasons
 				h2.section__header-black.mb-0 Why VPNinvisible is Your Best Choice
 		.row.reasons__icons.mb-5
-			.offset-lg-1.col-lg-2.col-12.mb-1.mb-lg-0.text-center.d-lg-flex.flex-column.justify-content-end
+			.col-lg.col-12.mb-1.mb-lg-0.text-center.d-lg-flex.flex-column.justify-content-end
 				img.reasons__image.mb-3.d-none.d-lg-block.mx-auto(src='templates/images/icon-no-ads.svg')
 				p.reasons__text.d-inline-block.text-left.text-lg-center.mb-0 No Advertising
-			.col-lg-2.col-12.mb-1.mb-lg-0.text-center.d-lg-flex.flex-column.justify-content-end
+			.col-lg.col-12.mb-1.mb-lg-0.text-center.d-lg-flex.flex-column.justify-content-end
 				img.reasons__image.mb-3.d-none.d-lg-block.mx-auto(src='templates/images/icon-high-speed.svg')
 				p.reasons__text.d-inline-block.text-left.text-lg-center.mb-0 High speed
-			.col-lg-2.col-12.mb-1.mb-lg-0.text-center.d-lg-flex.flex-column.justify-content-end
+			.col-lg.col-12.mb-1.mb-lg-0.text-center.d-lg-flex.flex-column.justify-content-end
 				img.reasons__image.mb-3.d-none.d-lg-block.mx-auto(src='templates/images/icon-unlimited-traffic.svg')
 				p.reasons__text.d-inline-block.text-left.text-lg-center.mb-0 Unlimited traffic
-			.col-lg-2.col-12.mb-1.mb-lg-0.text-center.d-lg-flex.flex-column.justify-content-end
+			.col-lg.col-12.mb-1.mb-lg-0.text-center.d-lg-flex.flex-column.justify-content-end
 				img.reasons__image.mb-3.d-none.d-lg-block.mx-auto(src='templates/images/icon-uptime.svg')
 				p.reasons__text.d-inline-block.text-left.text-lg-center.mb-0 99% Uptime
-			.col-lg-2.col-12.mb-lg-0.text-center.d-lg-flex.flex-column.justify-content-end
+			.col-lg.col-12.mb-lg-0.text-center.d-lg-flex.flex-column.justify-content-end
 				img.reasons__image.mb-3.d-none.d-lg-block.mx-auto(src='templates/images/icon-simple-to-use.svg')
 				p.reasons__text.d-inline-block.text-left.text-lg-center.mb-0 Simple to use
 		.row
