--- a/source/template/block/_forgot-password.pug
+++ b/source/template/block/_forgot-password.pug
@@ -10,7 +10,7 @@ section.forgot.mt-5
 						.row
 							.offset-sm-1.col-sm-10.col-12.text-center
 								h1.thank__header Forgot password?
-								p.send-to.text-center Enter your email address and we’ll send you a new password.
+								p.send-to.text-center Enter your email address and we’ll send you instructions how to change your password.
 						.row
 							.col-12.col-sm-10.offset-sm-1
 								form.forgot__form.needs-validation.d-flex.flex-wrap.flex-md-nowrap(novalidate)
