--- a/source/template/block/_sign-up.pug
+++ b/source/template/block/_sign-up.pug
@@ -19,7 +19,7 @@ section.signup.mt-5
 							.col-12
 								label.required__label.mb-1(for='validationPasswordConfirm') Re-type password
 								input.form-control(type='password' id='validationPasswordConfirm' required)
-								.invalid-feedback Password didn't matched.
+								.invalid-feedback Password didn’t match.
 						.form-row.mb-3
 							.col-12
 								.signup__promo
@@ -39,7 +39,7 @@ section.signup.mt-5
 										input.custom-control-input(type='checkbox' id='terms' required)
 										label.custom-control-label(for='terms') I agree with 
 											a.label__link(href='#') terms and conditions 
-										.invalid-feedback You mastagree with our terms and conditions
+										.invalid-feedback You mast agree with our terms and conditions
 						.form-row.pt-3
 							.col-12
 								button.button-default.signup__button.mx-auto(type='submite') Start free trial
@@ -53,17 +53,23 @@ section.signup.mt-5
 						li.reason__item.mb-2 No Advertising
 						li.reason__item.mb-2 Hight speed
 						li.reason__item.mb-2 Unlimited traffic
-						li.reason__item.mb-2 99% Uptime
+						li.reason__item.mb-2 100% Safe
 						li.reason__item Simple to use
 					.work
 						.work__header.mb-3 Work with
 						ul.work__list.d-flex
-							li.work__item.mr-3
+							li.work__item.mr-2
 								i.i-youtube.work-with__icon
 								p.work__text.text-center Youtube Videos
-							li.work__item.mr-3
+							li.work__item.mr-2
 								i.i-casino.work-with__icon
 								p.work__text.text-center Online casinos
-							li.work__item
+							li.work__item.mr-2
 								i.i-adult.work-with__icon
 								p.work__text.text-center Adult websites
+							li.work__item.mr-2
+								i.i-shopping.work-with__icon
+								p.work__text.text-center Online Shopping
+							li.work__item
+								i.i-sharing.work-with__icon
+								p.work__text.text-center P2P Sharing
