--- a/source/template/block/_thank-you-message.pug
+++ b/source/template/block/_thank-you-message.pug
@@ -11,8 +11,8 @@ section.thank.mt-5
 								h4.thank__subheader.mb-3 Your registration was completed successfully.
 						.row.mb-3
 							.col-12.thank__info.pt-3
-								p.send-to.text-center We have sent you confirmation with your username and password to email adress 
-									span john.doe@gmail.com
+								p.send-to.text-center We have sent you confirmation email with your username and download links to email address 
+									span  „joh••••@gmail.com“
 								.thank__why.d-flex.align-items-end.justify-content-center.mb-3
 									i.i-arrow.mr-2
 									p.thank__question.mb-0 While you’re here…
@@ -20,10 +20,10 @@ section.thank.mt-5
 						.row
 							.col-12.col-sm-6.mb-3.mb-sm-0
 								a(href='#')
-									.app-store-icon
+									.app-store-btn-icon
 							.col-12.col-sm-6
 								a(href='#')
-									.google-store-icon
+									.google-store-btn-icon
 		.row.mt-3
 			.col-12.text-center.copyright
 				p.copyright © 2012-2018 VPN. All rights reserved.
