--- a/source/template/block/_pricing.pug
+++ b/source/template/block/_pricing.pug
@@ -15,9 +15,9 @@ section.pricing#link4
 				.pricing__item.pb-2.item
 					.item__time.py-4.mb-3 30 days free
 					.item__price
-						p.price.mb-1 2.75
+						p.price.mb-1 9.99
 						p.interval Per month
 					.item__descr.mb-2 After free trial expires.
 		.row
 			.col-xl-12.justify-content-center.d-flex.mt-5
-				a.reasons__btn.button-default(href='/signup.html') Signup. It's free!
+				a.reasons__btn.button-default(href='/signup.html') Start free trial!
