--- a/source/template/block/_work-with.pug
+++ b/source/template/block/_work-with.pug
@@ -2,20 +2,26 @@ section.work-with
 	.container
 		.row
 			.col-xl-7.mb-3.mb-xl-0
-				.work-with__wrapper.d-flex.align-items-center.flex-wrap.flex-md-nowrap
+				.work-with__wrapper.d-flex.flex-wrap.flex-md-nowrap
 					.work-with__header.text-center.text-sm-left.mb-3.mb-xl-0 Work with
 					ul.work-with__list.mb-0.d-flex
-						li.work-with__item.d-flex.flex-column.flex-xl-row.align-items-center.youtube__item.mr-md-4
-							i.i-youtube.work-with__icon.mr-0.mr-xl-2.mb-2.mb-xl-0
-							p.work-with__text.mb-0.text-center.text-xl-left Youtube Videos
-						li.work-with__item.d-flex.flex-column.flex-xl-row.align-items-center.casino__item.mr-md-4
-							i.i-casino.work-with__icon.mr-0.mr-xl-2.mb-2.mb-xl-0
-							p.work-with__text.mb-0.text-center.text-xl-left Online Casinos
-						li.work-with__item.d-flex.flex-column.flex-xl-row.align-items-center.adult__item
-							i.i-adult.work-with__icon.mr-0.mr-xl-2.mb-2.mb-xl-0
-							p.work-with__text.mb-0.text-center.text-xl-left Adult Content websites
+						li.work-with__item.d-flex.flex-column.align-items-center.youtube__item.mr-md-4
+							i.i-youtube.work-with__icon.mb-2
+							p.work-with__text.mb-0.text-center Youtube Videos
+						li.work-with__item.d-flex.flex-column.align-items-center.casino__item.mr-md-4
+							i.i-casino.work-with__icon.mb-2
+							p.work-with__text.mb-0.text-center Online Casinos
+						li.work-with__item.d-flex.flex-column.align-items-center.adult__item.mr-md-4
+							i.i-adult.work-with__icon.mb-2
+							p.work-with__text.mb-0.text-center Adult Content websites
+						li.work-with__item.d-flex.flex-column.align-items-center.youtube__item.mr-md-4
+							i.i-shopping.work-with__icon.mb-2
+							p.work-with__text.mb-0.text-center Online shopping
+						li.work-with__item.d-flex.flex-column.align-items-center.youtube__item
+							i.i-sharing.work-with__icon.mb-2
+							p.work-with__text.mb-0.text-center P2P Sharing
 			.col-xl-5
-				.work-with__wrapper.d-flex.align-items-center.flex-wrap.flex-md-nowrap
+				.work-with__wrapper.d-flex.flex-wrap.flex-md-nowrap
 					.work-with__header.text-center.text-sm-left.mb-3.mb-xl-0 Available for
 					ul.work-with__list.avaliable__list.mb-0.d-flex.flex-wrap.flex-md-nowrap
 						li.work-with__item.d-flex.align-items-center.mr-0.mr-md-3
