--- a/source/template/block/_sign-up.pug
+++ b/source/template/block/_sign-up.pug
@@ -50,11 +50,11 @@ section.signup.mt-5
 				.signup__sidebar.pt-5
 					h4.signup__header.pt-4.mb-3 Why choose VPNinvisible?
 					ul.reason__list.pb-4.mb-4
+						li.reason__item.mb-2 Simple to use
 						li.reason__item.mb-2 No Advertising
 						li.reason__item.mb-2 Hight speed
 						li.reason__item.mb-2 Unlimited traffic
-						li.reason__item.mb-2 100% Safe
-						li.reason__item Simple to use
+						li.reason__item 100% Safe
 					.work
 						.work__header.mb-3 Work with
 						ul.work__list.d-flex
