--- a/source/template/block/_thank-you-message.pug
+++ b/source/template/block/_thank-you-message.pug
@@ -16,7 +16,7 @@ section.thank.mt-5
 								.thank__why.d-flex.align-items-end.justify-content-center.mb-3
 									i.i-arrow.mr-2
 									p.thank__question.mb-0 While you’re here…
-								p.thank__download.text-center.mx-auto Download and install VPNinvisible application  if haven’t done it yet.
+								p.thank__download.text-center.mx-auto Download and install the VPNinvisible application  if haven’t done it yet.
 						.row
 							.col-12.col-sm-6.mb-3.mb-sm-0
 								a(href='#')
