--- a/source/template/block/_how-it-work.pug
+++ b/source/template/block/_how-it-work.pug
@@ -5,4 +5,6 @@ section.how
 				h2.section__header-black.mb-0 How it works?
 		.row
 			.offset-xl-1.col-xl-10.col-12
-				img.how__image(src='templates/images/how.png')
+				picture.how__picture
+					img.how__image-big(src='templates/images/how-it-works@2x.png')
+					img.how__image(src='templates/images/how-it-works.png')
