--- a/source/template/block/_reason.pug
+++ b/source/template/block/_reason.pug
@@ -5,7 +5,7 @@ section.reasons#link1
 				h2.section__header-red.mb-3 5 Reasons
 				h2.section__header-black.mb-0 Why VPNinvisible is Your Best Choice
 		.row.reasons__icons.mb-5
-			.col-lg.col-12.mb-lg-0.text-center.d-lg-flex.flex-column.justify-content-end
+			.col-lg.col-12.mb-1.mb-lg-0.text-center.d-lg-flex.flex-column.justify-content-end
 				img.reasons__image.mb-3.d-none.d-lg-block.mx-auto(src='templates/images/icon-simple-to-use.svg')
 				p.reasons__text.d-inline-block.text-left.text-lg-center.mb-0 Simple to use
 			.col-lg.col-12.mb-1.mb-lg-0.text-center.d-lg-flex.flex-column.justify-content-end
