start main screen

--- a/source/template/block/_header.pug
+++ b/source/template/block/_header.pug
@@ -1,21 +1,29 @@
-header.header
+section.header
 	.container
 		.row
-			.col-xl-12
-				nav.navbar.navbar-expand-lg.justify-content-sm-center.justify-content-xs-center.justify-content-center.px-0
-					a.navbar-brand.mr-0(href='/index.html')
-						img.logo-image(src='templates/images/vpninvisible-logo.svg')
-					//- button.navbar-toggler(type='button' data-toggle='collapse' data-target='#navbarToggle' aria-controls='navbarToggle')
-						span.navbar-toggle-icon
-					.collapse.navbar-collapse#navbarToggle
-						ul.navbar-nav.align-items-center.ml-auto.mt-3
-							li.nav-item.ml-0
-								a.nav-link(href='#link1') Why our App?
-							li.nav-item.ml-3
-								a.nav-link(href='#link2') Do I need VPN?
-							li.nav-item.ml-3
-								a.nav-link(href='#link3') Download
-							li.nav-item.ml-3
-								a.nav-link(href='#link4') Pricing
-							li.nav-item.ml-3
-								a.nav-link.button-default.button-header(href='/signup.html') Signup
+			.col-12
+				.navbar.navbar-expand-lg.navbar-light
+					a(href='./index.html').navbar-brand
+						img.navbar-logo(src='' alt='logo')
+					button.navbar-toggler(type='button' data-toggle='collapse' data-target='#navbarNav')
+						span.navbar-toggler-icon
+					.collapse.navbar-collapse#navbarNav
+						ul.navbar-nav.ml-auto
+							li.nav-item
+								a(href='#').nav-link Solution
+							li.nav-item
+								a(href='#').nav-link How it works?
+							li.nav-item
+								a(href='#').nav-link Technology
+							li.nav-item
+								a(href='#').nav-link Market
+							li.nav-item
+								a(href='#').nav-link Roadmap
+							li.nav-item
+								a(href='#').nav-link Team
+							li.nav-item
+								a(href='#').nav-link Partners
+							li.nav-item
+								a(href='#').nav-link Tokens
+							li.nav-item
+								a(href='#').nav-link Contact Us
