--- a/source/template/block/_main-screen.pug
+++ b/source/template/block/_main-screen.pug
@@ -1,12 +1,12 @@
 section.main
 	.container
 		.row
-			.col-xl-6
-				.main-screen.d-flex.flex-column.align-items-center.align-items-lg-start
-					h1.main-screen__header.mb-3.text-center.text-lg-left Stay invisible with one touch.
-					picture.main__picture
-						img.main__image-big(src='templates/images/hero-img-m@2x.png')
-						img.main__image(src='templates/images/hero-img-m.png')
-					p.main-screen__text.mb-3.mb-md-5.text-center.text-lg-left The simplest VPN App. 
-						a.main-screen__link(href='#') Try it for free.
-					a.main-screen__btn.button-default(href='/signup.html') Get it now!
+			.offset-lg-1.col-lg-6
+				.main__wrapper
+					h1 Revolution in Car Inurance
+					p Lowest premiums.
+					p Fastest claims process.
+				form.form-mail
+					.form-group.mb-0
+						input.form-control.form-mail__input(type='email' placeholder='Enter your email address')
+					button.btn.btn-primary.form-mail__button(type='submite') Stay updated
