--- a/source/template/pages/index.pug
+++ b/source/template/pages/index.pug
@@ -1,14 +1,9 @@
 extends ../_template
 
 block variables
-	- var title = ['VPN','index page description','index page keywords']
+	- var title = ['Main','index page description','index page keywords']
 
 block content
 	include ../block/_header
 	include ../block/_main-screen
-	include ../block/_work-with
-	include ../block/_reason
-	include ../block/_why
-	include ../block/_how-it-work
-	include ../block/_pricing
-	include ../block/_footer
+
