--- a/source/style/blocks/_main-screen.scss
+++ b/source/style/blocks/_main-screen.scss
@@ -1,3 +1,16 @@
 .main{
-	
+	padding: 3.5rem 0 5.5rem;
+	&__text{
+		font-size: 28px;
+		font-weight: $light;
+		color: $textColorHeader;
+	}
+	&__header{
+		font-size: 56px;
+		color: $textColorHeader;
+		span{
+			display: inline-block;
+			width: 100%;
+		}
+	}
 }
