--- a/source/template/block/_header.pug
+++ b/source/template/block/_header.pug
@@ -4,7 +4,7 @@ section.header
 			.col-12
 				.navbar.navbar-expand-lg.navbar-light
 					a(href='./index.html').navbar-brand
-						img.navbar-logo(src='' alt='logo')
+						img.navbar-logo(src='templates/images/logo.svg' alt='logo')
 					button.navbar-toggler(type='button' data-toggle='collapse' data-target='#navbarNav')
 						span.navbar-toggler-icon
 					.collapse.navbar-collapse#navbarNav
