--- a/source/template/block/_main-screen.pug
+++ b/source/template/block/_main-screen.pug
@@ -3,10 +3,11 @@ section.main
 		.row
 			.offset-lg-1.col-lg-6
 				.main__wrapper
-					h1 Revolution in Car Inurance
-					p Lowest premiums.
-					p Fastest claims process.
-				form.form-mail
+					h1.main__header.mb-4 Revolution
+						span in Car Inurance
+					p.main__text.mb-0 Lowest premiums.
+					p.main__text.mb-0 Fastest claims process.
+				form.form-mail.mt-4
 					.form-group.mb-0
 						input.form-control.form-mail__input(type='email' placeholder='Enter your email address')
-					button.btn.btn-primary.form-mail__button(type='submite') Stay updated
+					button.form-mail__button(type='submite') Stay updated
