--- a/source/template/pages/index.pug
+++ b/source/template/pages/index.pug
@@ -6,4 +6,8 @@ block variables
 block content
 	include ../block/_header
 	include ../block/_main-screen
+	include ../block/_problem
+	include ../block/_solution
+	include ../block/_how-it-work
+	include ../block/_why
 
