--- a/source/template/pages/index.pug
+++ b/source/template/pages/index.pug
@@ -10,4 +10,6 @@ block content
 	include ../block/_solution
 	include ../block/_how-it-work
 	include ../block/_why
+	include ../block/_technology
+	include ../block/_market-overview
 
