--- a/source/style/common/variables.scss
+++ b/source/style/common/variables.scss
@@ -9,6 +9,9 @@ $textColorDarkPurple: #27174C;
 // Background color
 $backgroundGrey: #F9F9F9;
 
+// Border coloe
+$borderGrey: #EAEAEA;
+
 // Team color
 $teamColorOne: #0033CB;
 $teamColorTwo: #3686FF;
