--- a/source/template/block/_market-overview.pug
+++ b/source/template/block/_market-overview.pug
@@ -4,4 +4,7 @@ section.market-overview
 			.col-12.text-center
 				.market-overview__header
 					h3.section__header Market Overview
-					p.section__description.mb-0 The difference between premiums and claims is €32 billions. Ubitel goal is to bring these money back to customers pockets.
+					p.section__description.mb-0 The difference between premiums and claims is €32 billions. 
+					p.section__description.mb-0 Ubitel goal is to bring these money back to customers pockets.
+			.col-12.text-center
+				img(src='templates/images/chart-3.svg').market-overview__image.mt-5
