--- a/source/template/pages/index.pug
+++ b/source/template/pages/index.pug
@@ -12,4 +12,10 @@ block content
 	include ../block/_why
 	include ../block/_technology
 	include ../block/_market-overview
+	include ../block/_roadmap
+	include ../block/_mail-form
+	include ../block/_team
+	include ../block/_partners
+	include ../block/_mail-form
+	include ../block/_footer
 
